<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkblue">

        <ImageView
            android:id="@+id/imgbtnMap"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginEnd="9dp"
            android:src="@drawable/menu_mapicon" />

        <ImageView
            android:id="@+id/imgbtnMenu"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="end"
            android:layout_marginEnd="9dp"
            android:src="@drawable/menu" />


    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="34sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnMenuProfile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:backgroundTint="@color/darkblue"
            android:text="@string/profile"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/btnMenuSearch"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:backgroundTint="@color/darkblue"
            android:text="@string/search"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/btnMenuRecommended"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:backgroundTint="@color/darkblue"
            android:text="@string/recommended_for_you"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/btnTrackOthers"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:backgroundTint="@color/darkblue"
            android:text="@string/track_others"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/btnUploadNewPlace"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:backgroundTint="@color/darkblue"
            android:text="@string/upload_new_place"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/btnRequestHelp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:backgroundTint="@color/darkblue"
            android:text="@string/request_help"
            android:textColor="@color/white"/>

    </LinearLayout>


</LinearLayout>




<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->

<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:orientation="vertical">-->

<!--    <TableLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_below="@id/textView"-->
<!--        android:paddingHorizontal="60dp"-->
<!--       -->
<!--        app:layout_constraintTop_toTopOf="@+id/guideline3"-->
<!--        tools:context=".MainActivity">-->

<!--        <TableRow-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="#051D40"-->
<!--            android:gravity="center_horizontal">-->

<!--            <TextView-->
<!--                android:id="@+id/menu_profile"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:paddingVertical="10dp"-->
<!--                android:text="Profile"-->
<!--                android:textColor="#FFF"-->
<!--                android:textSize="20sp" />-->
<!--        </TableRow>-->

<!--        <TableRow-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="#051D40"-->
<!--            android:gravity="center_horizontal">-->

<!--            <TextView-->
<!--                android:id="@+id/menu_search"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:paddingVertical="10dp"-->
<!--                android:text="Search"-->
<!--                android:textColor="#FFF"-->
<!--                android:textSize="20sp" />-->
<!--        </TableRow>-->

<!--        <TableRow-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="#051D40"-->
<!--            android:gravity="center_horizontal">-->

<!--            <TextView-->
<!--                android:id="@+id/menu_recommendedforyou"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:paddingVertical="10dp"-->
<!--                android:text="Recommended For You"-->
<!--                android:textColor="#FFF"-->
<!--                android:textSize="20sp" />-->
<!--        </TableRow>-->

<!--        <TableRow-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="#051D40"-->
<!--            android:gravity="center_horizontal">-->

<!--            <TextView-->
<!--                android:id="@+id/menu_trackothers"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:paddingVertical="10dp"-->
<!--                android:text="Track Others"-->
<!--                android:textColor="#FFF"-->
<!--                android:textSize="20sp" />-->
<!--        </TableRow>-->

<!--        <TableRow-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="#051D40"-->
<!--            android:gravity="center_horizontal">-->

<!--            <TextView-->
<!--                android:id="@+id/menu_uploadnewplace"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:paddingVertical="10dp"-->
<!--                android:text="Upload New Place"-->
<!--                android:textColor="#FFF"-->
<!--                android:textSize="20sp" />-->
<!--        </TableRow>-->

<!--        <TableRow-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="#051D40"-->
<!--            android:gravity="center_horizontal">-->

<!--            <TextView-->
<!--                android:id="@+id/menu_requesthelp"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:paddingVertical="10dp"-->
<!--                android:text="Request Help"-->
<!--                android:textColor="#FFF"-->
<!--                android:textSize="20sp" />-->
<!--        </TableRow>-->
<!--    </TableLayout>-->

<!--    <TextView-->
<!--        android:id="@+id/textView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="61dp"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_weight="1"-->
<!--        android:text="@string/app_name"-->
<!--        android:textSize="34sp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/guideline1"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

<!--    <androidx.constraintlayout.widget.Guideline-->
<!--        android:id="@+id/guideline1"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintGuide_begin="1dp"-->
<!--        app:layout_constraintGuide_percent="0.1" />-->

<!--    <androidx.constraintlayout.widget.Guideline-->
<!--        android:id="@+id/guideline2"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical"-->
<!--        app:layout_constraintGuide_begin="1dp"-->
<!--        app:layout_constraintGuide_percent="0.5" />-->

<!--    <androidx.constraintlayout.widget.Guideline-->
<!--        android:id="@+id/guideline3"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintGuide_begin="1dp"-->
<!--        app:layout_constraintGuide_percent="0.3" />-->

<!--</androidx.constraintlayout.widget.ConstraintLayout>-->

